fix: #toc-body don't need overflow:scroll property

--- a/components/TableOfContents/TableOfContents.css
+++ b/components/TableOfContents/TableOfContents.css
@@ -82,7 +82,6 @@
   opacity: 0;
   pointer-events: none; /* Non cliquable quand fermé  ca aussi*/
 
-  overflow: scroll;
   overflow-x: hidden;
 }
 
